# ChessPositionsTrainerPC

./: CREDITS.md  Cargo.toml  LICENSE  README.md
src/: main.rs
src/chess_position_trainer/: graphic.rs  mod.rs
src/chess_position_trainer/graphic/: chessboard.rs  load_images.rs  main_window.rs  misc_images.rs  mod.rs  piece_images.rs
src/chess_position_trainer/logic/: chessgame.rs  computer.rs  mod.rs  uci.rs
src/resources/: CREDITS.md
