[package]
name = "chess_position_trainer"
version = "0.1.0"
authors = ["Laurent Bernabe <laurent.bernabe@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
cairo-rs = "0.5.0"
gdk = "0.9.0"
gdk-pixbuf = "0.5.0"
shakmaty = "0.12.0"
uci = "0.1.2"
gio = "0.5.1"
glib = "0.6.0"

[dependencies.gtk]
version = "0.5.0"
features = ["v3_10"]
